# pvr.rtlradio

./: .clang-format  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
cmake/: FindFDK-AAC.cmake  FindFDK_AAC.cmake  FindSQLite3.cmake  Findlibusb-1.0.cmake
debian/: changelog.in  control  copyright  kodi-pvr-rtlradio.install  rules
depends/android/libudev-zero/: CMakeLists.txt  libudev-zero.sha256  libudev-zero.txt
depends/common/fdk-aac/: 0001-fix-android-log-error.patch  fdk-aac.sha256  fdk-aac.txt  flags.txt
depends/common/fftw3/: fftw3.txt  flags.txt
depends/common/libusb/: CMakeLists.txt  libusb.sha256  libusb.txt  platforms.txt
depends/common/mpg123/: CMakeLists.txt  fix-m1-build.patch  flags.txt  mpg123.sha256  mpg123.txt
depends/common/rtl-sdr/: 0002-fix-version-check.patch  0003-fix-library-export.patch  0004-fix-win-build.patch  flags.txt  platforms.txt  rtl-sdr.sha256  rtl-sdr.txt  windows-deps.txt
depends/common/sqlite3/: 0001-no-exe-build.patch  CMakeLists.txt  sqlite3.sha256  sqlite3.txt
depends/windows/libusb/: CMakeLists.txt  libusb.sha256  libusb.txt
depends/windows/pthread-win32/: 0001-fix-uwp-build.patch  pthread-win32.sha256  pthread-win32.txt
pvr.rtlradio/: addon.xml.in  changelog.txt
pvr.rtlradio/resources/: settings.xml  settings.xml.in
pvr.rtlradio/resources/language/resource.language.en_gb/: strings.po
pvr.rtlradio/resources/skins/skin.estuary/xml/: channelsettings.xml
src/: CMakeLists.txt  CMakeLists.txt.orig  addon.cpp  addon.h  align.h  anglepch.cpp  anglepch.h  autogaincontrol.cpp  autogaincontrol.h  channeladd.cpp  channeladd.h  channelsettings.cpp  channelsettings.h  dabmuxscanner.cpp  dabmuxscanner.h  dabstream.cpp  dabstream.h  database.cpp  database.h  dbtypes.h  filedevice.cpp  filedevice.h  fmstream.cpp  fmstream.h  hdmuxscanner.cpp  hdmuxscanner.h  hdstream.cpp  hdstream.h  id3v1tag.cpp  id3v1tag.h  id3v2tag.cpp  id3v2tag.h  libusb_exception.cpp  libusb_exception.h  muxscanner.h  props.h  pvrstream.h  pvrtypes.h  rdsdecoder.cpp  rdsdecoder.h  (+21 more)
src/compat/: pthread.h
src/compat/bionic/: CMakeLists.txt  complex.cpp
src/dabdsp/: CMakeLists.txt  MathHelper.h  dab-audio.h  dab-constants.h  dabplus_decoder.cpp  dabplus_decoder.h  decode_rs.h  decode_rs_char.c  encode_rs_char.c  fec.h  fft.cpp  fft.h  init_rs_char.c  ofdm-decoder.cpp  ofdm-decoder.h  ofdm-processor.cpp  ofdm-processor.h  phasetable.cpp  radio-controller.h
src/dsp_dab/: CMakeLists.txt  MathHelper.h  Xtan2.cpp  charsets.cpp  dab-audio.cpp  dab-constants.cpp  dab-constants.h  dabplus_decoder.cpp  decoder_adapter.cpp  decoder_adapter.h  fec.h  fib-processor.cpp  mot_manager.cpp  mot_manager.h  msc-handler.cpp  ofdm-processor.cpp  pad_decoder.cpp  pad_decoder.h  pad_decoder_datagroup.cpp  pad_decoder_datagroup.h  pad_decoder_dgli.cpp  pad_decoder_dgli.h  pad_decoder_dynamiclabelsegment.cpp  pad_decoder_dynamiclabelsegment.h  pad_decoder_mot.cpp  pad_decoder_mot.h  radio-controller.h  radio-receiver.cpp  ringbuffer.h  tii-decoder.cpp  viterbi.cpp  viterbi.h
src/dsp_dab/decoders/: CMakeLists.txt  dab_virtual.h  decoder_adapter.cpp  decoder_adapter.h  eep_protection.cpp  eep_protection.h  protection.h  uep_protection.cpp  uep_protection.h
src/dsp_dab/decoders/audio/: CMakeLists.txt  dab_audio.cpp  dab_audio.h  subchannel_sink.h
src/dsp_dab/decoders/audio/aac/: CMakeLists.txt  aac_decoder.cpp  aac_decoder.h  fec.c
src/dsp_dab/decoders/audio/mp2/: CMakeLists.txt  mp2_decoder.cpp  mp2_decoder.h
src/dsp_dab/decoders/data/mot/: CMakeLists.txt  mot_entity.cpp  mot_entity.h  mot_file.cpp  mot_file.h  mot_manager.cpp  mot_manager.h  mot_object.cpp  mot_object.h
src/dsp_dab/decoders/data/pad/: CMakeLists.txt  pad_decoder.cpp  pad_decoder.h  pad_decoder_datagroup.cpp  pad_decoder_datagroup.h  pad_decoder_dgli.cpp  pad_decoder_dgli.h  pad_decoder_dynamiclabelsegment.cpp  pad_decoder_dynamiclabelsegment.h  pad_decoder_mot.cpp  pad_decoder_mot.h
src/dsp_fm/: CMakeLists.txt
src/dsp_hd/: CMakeLists.txt  acquire.h  config.h  conv_dec.c  conv_gen.h  defines.h  firdecim_q15.c  input.c  input.h  nrsc5.c  output.h  private.h  sync.c
src/exception_control/: CMakeLists.txt  socket_exception.h  sqlite_exception.cpp  sqlite_exception.h  string_exception.h  win32_exception.cpp
src/fmdsp/: CMakeLists.txt
src/gui/: CMakeLists.txt  channeladd.cpp  channelscan.cpp  channelscan.h  channelsettings.cpp  channelsettings.h
src/hddsp/: CMakeLists.txt  acquire.c  acquire.h  config.h  conv_sse.h  decode.c  defines.h  firdecim_q15.h  input.h  nrsc5.h  output.c  private.h  rs_decode.c  sync.h
src/utils/: CMakeLists.txt  align.h  charsets.cpp  charsets.h  log.cpp  log.h  scalar_condition.h  value_size_defines.h
